# word2vec-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  word2vec.typ
.github/workflows/: ci.yaml
examples/: basic_training.rs
src/: config.rs  embeddings.rs  error.rs  lib.rs  main.rs  model.rs  plot.rs  trainer.rs  vocab.rs
tests/: integration.rs
