[package]
name = "word2vec"
version = "0.1.0"
edition = "2021"
authors = ["Word2Vec Rust Implementation"]
description = "Production-grade Word2Vec implementation in Rust (Skip-gram + CBOW with Negative Sampling)"
license = "MIT"
keywords = ["nlp", "word2vec", "embeddings", "machine-learning"]
categories = ["science"]

[lib]
name = "word2vec"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
indicatif = "0.17"
plotters = "0.3"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
